# pegainfer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
bench_snapshots/: qwen3-4b.json  qwen3.5-4b.json
benches/: ops_bench.rs  tokenizer_bench.rs
benches/ops/: mod.rs  (+6 more)
crates/pegainfer-core/: Cargo.toml
crates/pegainfer-core/src/: cuda_graph.rs  kv_pool.rs  page_pool.rs  weight_loader.rs
crates/pegainfer-core/src/ops/: attention.rs  paged_plan.rs
crates/pegainfer-kernels/: Cargo.toml  build.rs
crates/pegainfer-kernels/csrc/: common.cuh  fused_proj.cu  gated_delta_rule.cu  norm.cu  paged_attention.cu
crates/pegainfer-kernels/src/: ffi.rs  lib.rs  ops.rs
crates/pegainfer-kernels/src/ops/: attention.rs  linear.rs
crates/pegainfer-kernels/tools/triton/: README.md  flash_attention_prefill_hd256_kernel.py  gated_delta_rule_chunkwise_kernels.py
crates/pegainfer-qwen3-4b/: Cargo.toml
crates/pegainfer-qwen3-4b/benches/: qwen3_kernel_snapshot.rs
crates/pegainfer-qwen3-4b/src/: batch_decode.rs  batch_decode_buffers.rs  kernel_bench.rs  lib.rs  prefill.rs  weights.rs
crates/pegainfer-qwen3-4b/src/scheduler/: effects.rs
crates/pegainfer-qwen3-4b/tests/: e2e.rs  paged_attention.rs  regen_test_data.rs
csrc/: activation.cu  argmax.cu  conv1d.cu  deep_ep.cu  elementwise.cu  embedding.cu  flash_mla.cu  flash_mla_prefill.cu  flashinfer_norm.cu  flashinfer_sampling.cu  flashinfer_top1.cu  fp8_gemm.cu  fp8_quantize.cu  fused_attention.cu  fused_attention_hd256.cu  fused_mlp.cu  gated_delta_rule.cu  gemv.cu  linear.cu  mla.cu  moe.cu  norm.cu  nsa_indexer.cu  paged_attention.cu  prefill_attention.cu  prefill_attention_hd256.cu  sampling.cu
docs/: index.md  nsys-profiling-guide.md  profiling-decode-launch-overhead.md
examples/: regenerate_test_data.rs
pegainfer-comm/: Cargo.toml  NOTICE.md  README.md
pegainfer-comm/benchmarks/: bench_all_to_all.py
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/src/: hw_cuda_impl.rs  lib.rs
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/src/a2a/: a2a_combine_recv.cu  a2a_dispatch_recv.cu  a2a_kernels.h
pegainfer-comm/crates/pegainfer-comm-a2a-kernels/src/core/: launch_utils.cuh
pegainfer-comm/crates/pegainfer-comm-cuda-sys/: build.rs
pegainfer-comm/crates/pegainfer-comm-cudart-sys/: build.rs
pegainfer-comm/crates/pegainfer-comm-fabric-lib/src/: topo.rs  transfer_engine_builder.rs
pegainfer-comm/crates/pegainfer-comm-gdrapi-sys/: build.rs
pegainfer-comm/crates/pegainfer-comm-libibverbs-sys/: build.rs
pegainfer-comm/crates/pegainfer-comm-p2p-all-to-all/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-p2p-all-to-all/src/: a2a_context.rs  a2a_worker.rs  lib.rs
pegainfer-comm/crates/pegainfer-comm-python-ext/src/: lib.rs  py_p2p_all_to_all.rs
pegainfer-comm/crates/pegainfer-comm-thread-lib/: Cargo.toml
pegainfer-comm/crates/pegainfer-comm-thread-lib/src/: lib.rs
pegainfer-comm/crates/pegainfer-comm-torch-lib/: build.rs
pegainfer-comm/docker/: dev.Dockerfile
pegainfer-comm/src/: builder.rs  ep_backend.rs  error.rs  lib.rs  plan.rs
pegainfer-comm/src/backend/: rdma.rs
pegainfer-core/: Cargo.toml
pegainfer-core/src/: cpu_topology.rs  engine.rs  ffi.rs  kv_cache.rs  lib.rs  ops.rs  sampler.rs  tensor.rs
pegainfer-core/src/ops/: sampling.rs
pegainfer-cupti/: Cargo.toml  build.rs
pegainfer-deepseek-v4/: Cargo.toml
pegainfer-deepseek-v4/src/: direct.rs  lib.rs  weights.rs
pegainfer-deepseek-v4/src/direct/: affinity.rs  pplx_bootstrap.rs  scheduler.rs  worker.rs
pegainfer-deepseek-v4/src/runtime/: attention.rs  attention_base.rs  block.rs  collectives.rs  compressor.rs  core.rs  indexer.rs  mod.rs  moe.rs  moe_pplx.rs  state.rs
pegainfer-deepseek-v4/tests/: mp8_manifest.rs
pegainfer-kernels/: Cargo.toml  KERNELS.md  build.rs
pegainfer-qwen3-4b/: Cargo.toml
pegainfer-qwen3-4b/kernel_manifests/: qwen3-4b.toml
pegainfer-qwen3-4b/src/: batch_decode.rs  config.rs  executor.rs  kernel_plan.rs  prefill.rs  scheduler.rs  unified_forward.rs
pegainfer-qwen3-4b/src/scheduler/: plan.rs  resolve.rs
pegainfer-qwen3-4b/tests/: e2e.rs  paged_attention.rs  regen_test_data.rs
pegainfer-qwen35-4b/: Cargo.toml
pegainfer-qwen35-4b/benches/: qwen35_ops.rs
pegainfer-qwen35-4b/benches/ops/: mod.rs  qwen35_norm_bench.rs  qwen35_state_bench.rs
pegainfer-qwen35-4b/src/: batch_decode.rs  batch_decode_graph.rs  lib.rs  ops.rs  recurrent.rs  unified_forward.rs
pegainfer-qwen35-4b/tests/: e2e.rs  e2e_scheduler.rs  regen_test_data.rs
pegainfer-server/: Cargo.toml
pegainfer-server/benches/: nccl_bench.rs  ops_bench.rs
pegainfer-server/benches/ops/: mod.rs  ops_batched_bench.rs
pegainfer-server/benches/ops/common/: mod.rs
pegainfer-server/src/: main.rs  ops.rs  sampler.rs  scheduler.rs  server_engine.rs  vllm_frontend.rs  weight_loader.rs
pegainfer-server/src/ops/: tests.rs
pegainfer-server/tests/common/: mod.rs
scripts/: eval_gsm8k_thinking.py  generate_test_data.py  generate_test_data_35.py  hf_qwen35_full_attn_internal_dump.py  hf_qwen35_hidden_dump.py  hf_qwen35_layer_stage_dump.py  hf_qwen35_linear_attn_internal_dump.py  hf_qwen35_prefill_probe.py  run_snapshot_benchmark.sh
src/: decode_buffers.rs  decode_buffers35.rs  ffi.rs  http_server.rs  kv_cache.rs  kv_pool.rs  lib.rs  logging.rs  main.rs  model.rs  model_executor.rs  ops.rs  page_pool.rs  prefill_buffers35.rs  qwen35_config.rs  qwen35_model.rs  qwen3_config.rs  recurrent_state.rs  sampler.rs  scheduler.rs  scheduler_dsv32.rs  scheduler_qwen35.rs  server_engine.rs  tensor.rs  tokenizer.rs  trace_reporter.rs  vllm_frontend.rs  weight_loader.rs
test_data/: DeepSeek-V3.2.json  Qwen3-4B.json  Qwen3-8B.json  Qwen3.5-4B.json
tests/: accuracy.rs  bench_decode.rs  bench_prefill.rs  e2e.rs  e2e_dsv32.rs  e2e_dsv32_small.rs  e2e_dsv32_vllm.rs  e2e_qwen35.rs  e2e_qwen35_scheduler.rs  gen_test_data_35.rs  paged_attention.rs  qwen3_8b_regression.rs  regen_test_data.rs  (+1 more)
(+234 files in other folders)
