[package]
autobenches = false
name = "pegainfer"
default-run = "pegainfer"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/pegainfer-kernels"]

[dependencies]
pegainfer-kernels = { path = "crates/pegainfer-kernels" }
safetensors = "0.7"
anyhow = "1.0"
ndarray = "0.16"
half = { version = "2.4", features = ["num-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
cudarc = { version = "0.19.4", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
    "f16",
    "nccl",
] }
memmap2 = "0.9"
log = "0.4"
logforth = { version = "0.29", features = ["starter-log", "layout-text", "diagnostic-task-local"] }
colored = "3"
fastrace = { version = "0.7.16", features = ["enable"] }
clap = { version = "4.5.57", features = ["derive"] }
rand = "0.10"
comfy-table = "7.2"
parking_lot = "0.12.5"
crossbeam-channel = "0.5"
rmp-serde = "1.3"
rmpv = "1.3"
vllm-engine-core-client = { git = "https://github.com/Inferact/vllm-frontend-rs.git", branch = "main" }
vllm-server = { git = "https://github.com/Inferact/vllm-frontend-rs.git", branch = "main" }
vllm-text = { git = "https://github.com/Inferact/vllm-frontend-rs.git", branch = "main" }
zeromq = { git = "https://github.com/BugenZhao/zmq.rs", rev = "dde4ee5c48846b0cc22b1f4fad8c7514748180fe", default-features = false, features = [
    "tokio-runtime",
    "all-transport",
] }

[features]
reference = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints (too noisy for this codebase)
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
upper_case_acronyms = "allow"
doc_markdown = "allow"
# Cherry-picked nursery lints
redundant_clone = "warn"
unused_peekable = "warn"
# Restriction lints worth enforcing
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "allow"
print_stderr = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[[bench]]
name = "ops_bench"
harness = false

[[bench]]
name = "nccl_bench"
harness = false
