[workspace]
resolver = "3"
default-members = ["pegainfer-server"]
members = [
    "pegainfer-engine",
    "pegainfer-vllm-frontend",
    "pegainfer-sim",
    "pegainfer-vllm-support",
    "pegainfer-server",
    "pegainfer-core",
    "pegainfer-cupti",
    "pegainfer-kernels",
    "pegainfer-deepseek-v4",
    "pegainfer-qwen3-4b",
    "pegainfer-qwen35-4b",
    # ---- pegainfer-comm (EP all-to-all skeleton, hardware-free default) ----
    "pegainfer-comm",
    "pegainfer-comm/crates/pegainfer-comm-build-utils",
    "pegainfer-comm/crates/pegainfer-comm-cuda-sys",
    "pegainfer-comm/crates/pegainfer-comm-cudart-sys",
    "pegainfer-comm/crates/pegainfer-comm-gdrapi-sys",
    "pegainfer-comm/crates/pegainfer-comm-libibverbs-sys",
    "pegainfer-comm/crates/pegainfer-comm-cuda-lib",
    "pegainfer-comm/crates/pegainfer-comm-thread-lib",
    "pegainfer-comm/crates/pegainfer-comm-proc-lib",
    "pegainfer-comm/crates/pegainfer-comm-logging-lib",
    "pegainfer-comm/crates/pegainfer-comm-torch-lib",
    "pegainfer-comm/crates/pegainfer-comm-fabric-lib",
    "pegainfer-comm/crates/pegainfer-comm-fabric-debug",
    "pegainfer-comm/crates/pegainfer-comm-a2a-kernels",
    "pegainfer-comm/crates/pegainfer-comm-p2p-all-to-all",
    "pegainfer-comm/crates/pegainfer-comm-python-ext",
]

[workspace.dependencies]
anyhow = "1.0"
bincode = "2.0.1"
bindgen = "0.72.1"
bytes = { version = "1.10.1", features = ["serde"] }
cc = "1.2"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3"
comfy-table = "7.2"
criterion = { version = "0.8", features = ["html_reports"] }
crossbeam-channel = "0.5"
cudarc = { version = "0.19.4", features = [
    "cuda-12090",
    "cublas",
    "f16",
    "nccl",
] }
cxx = "1.0.187"
cxx-build = "1.0.187"
dashmap = { version = "6.1.0", features = ["inline"] }
fastrace = { version = "0.7.17", features = ["enable"] }
half = { version = "2.7", features = ["num-traits"] }
hex = "0.4"
is-terminal = "0.4"
log = "0.4"
logforth = { version = "0.29", features = ["starter-log", "layout-text", "diagnostic-task-local"] }
libc = "0.2"
memmap2 = "0.9"
mockall = "0.13.1"
nvtx = "1.3.0"
once_cell = "1.21.3"
oneshot = "0.1.11"
parking_lot = "0.12.5"
pegainfer-core = { path = "pegainfer-core" }
pegainfer-cupti = { path = "pegainfer-cupti" }
pegainfer-deepseek-v4 = { path = "pegainfer-deepseek-v4" }
pegainfer-engine = { path = "pegainfer-engine" }
pegainfer-kernels = { path = "pegainfer-kernels" }
pegainfer-qwen3-4b = { path = "pegainfer-qwen3-4b" }
pegainfer-qwen35-4b = { path = "pegainfer-qwen35-4b" }
pegainfer-vllm-frontend = { path = "pegainfer-vllm-frontend" }
pegainfer-vllm-support = { path = "pegainfer-vllm-support" }
pegainfer-comm = { path = "pegainfer-comm" }
pkg-config = "0.3.32"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
pyo3 = { version = "0.27.1", features = ["anyhow"] }
rand = "0.10"
smallvec = { version = "1.15.1", features = ["serde", "union"] }
syscalls = "0.7.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
rmp-serde = "1.3"
rmpv = "1.3"
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
tokio = "1"
tokio-util = "0.7"
toml = "1.1"
uuid = "1"
vllm-engine-core-client = { git = "https://github.com/Inferact/vllm-frontend-rs.git", rev = "eb2b54b1a0b3ef2904a25538bc0211f058f7e95f" }
vllm-server = { git = "https://github.com/Inferact/vllm-frontend-rs.git", rev = "eb2b54b1a0b3ef2904a25538bc0211f058f7e95f" }
vllm-text = { git = "https://github.com/Inferact/vllm-frontend-rs.git", rev = "eb2b54b1a0b3ef2904a25538bc0211f058f7e95f" }
zeromq = { git = "https://github.com/BugenZhao/zmq.rs", rev = "dde4ee5c48846b0cc22b1f4fad8c7514748180fe", default-features = false, features = [
    "tokio-runtime",
    "all-transport",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints (too noisy for this codebase)
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
doc_markdown = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
upper_case_acronyms = "allow"
# Cherry-picked nursery lints
redundant_clone = "warn"
unused_peekable = "warn"
# Restriction lints worth enforcing
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "allow"
print_stderr = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
