[package]
name = "pegainfer-deepseek-v4"
version = "0.1.0"
edition = "2024"
autobenches = false
autobins = false
autotests = false

[features]
default = []
deepseek-v4 = ["pegainfer-kernels/deepseek-v4"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true, features = ["nccl"] }
half = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
pegainfer-core = { workspace = true }
pegainfer-kernels = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
vllm-text = { workspace = true }

[dev-dependencies]
libc = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "deepseek_kernel_check"
path = "src/bin/deepseek_kernel_check.rs"
required-features = ["deepseek-v4"]

[[bin]]
name = "deepseek_v4_e2e"
path = "src/bin/deepseek_v4_e2e.rs"
required-features = ["deepseek-v4"]

[[test]]
name = "mp8_manifest"
path = "tests/mp8_manifest.rs"
required-features = ["deepseek-v4"]
