[package]
name = "pegainfer-deepseek-v4"
version = "0.1.0"
edition = "2024"
autobenches = false
autobins = false
autotests = false

[features]
default = []
deepseek-v4 = ["pegainfer-kernels/deepseek-v4"]
deepseek-v4-cutedsl-diagnostic = [
    "deepseek-v4",
    "pegainfer-kernels/deepseek-v4-cutedsl-diagnostic",
]
# Activate the pplx-garden NVLink + RDMA all-to-all backend for decode MoE.
# Pulls in `pegainfer-comm` with its hardware features and exposes
# `runtime::moe_pplx` for the rank-worker MoE call site. Compiling with this
# feature requires CUDA, RDMA Verbs, and GDRCopy on the host; default builds
# are unaffected.
pplx-ep = [
    "deepseek-v4",
    "dep:pegainfer-comm",
    "pegainfer-comm/hw-rdma",
]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true, features = ["nccl"] }
half = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
pegainfer-comm = { workspace = true, optional = true }
pegainfer-core = { workspace = true }
pegainfer-kernels = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
vllm-text = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "deepseek_kernel_check"
path = "src/bin/deepseek_kernel_check.rs"
required-features = ["deepseek-v4"]

[[bin]]
name = "deepseek_v4_e2e"
path = "src/bin/deepseek_v4_e2e.rs"
required-features = ["deepseek-v4"]

[[test]]
name = "mp8_manifest"
path = "tests/mp8_manifest.rs"
required-features = ["deepseek-v4"]
