[package]
name = "pegainfer-qwen3-4b"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
pegainfer-core = { workspace = true }
pegainfer-cupti = { workspace = true, optional = true }
pegainfer-kernels = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true }
fastrace = { workspace = true }
half = { workspace = true }
hex = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true, optional = true }

[features]
kernel-report = ["dep:clap", "dep:hex", "dep:pegainfer-cupti", "dep:sha2", "dep:toml"]

[dev-dependencies]
vllm-text = { workspace = true }

[[bin]]
name = "qwen3_kernel_report"
path = "src/bin/qwen3_kernel_report.rs"
required-features = ["kernel-report"]

[lints]
workspace = true
