[package]
name = "pegainfer-qwen3-4b"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
pegainfer-core = { path = "../pegainfer-core" }
pegainfer-kernels = { path = "../pegainfer-kernels" }
anyhow = "1.0"
crossbeam-channel = "0.5"
cudarc = { version = "0.19.4", features = [
    "cuda-version-from-build-system",
    "cublas",
    "cuda-12080",
    "f16",
    "nccl",
] }
fastrace = { version = "0.7.16", features = ["enable"] }
half = { version = "2.4", features = ["num-traits"] }
log = "0.4"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
pegainfer-cupti = { path = "../pegainfer-cupti" }
vllm-text = { git = "https://github.com/Inferact/vllm-frontend-rs.git", branch = "main" }

[[bench]]
name = "qwen3_kernel_snapshot"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
upper_case_acronyms = "allow"
doc_markdown = "allow"
redundant_clone = "warn"
unused_peekable = "warn"
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "allow"
print_stderr = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
