[package]
edition = "2024"
links = "a2a_kernels"
name = "pegainfer-comm-a2a-kernels"
publish = false

[features]
# Hardware backend feature: when on, the CUDA kernels for all-to-all dispatch
# and combine are compiled via `nvcc` through cxx-build. When off (default),
# `build.rs` is a no-op and the crate exposes only `HW_CUDA_ENABLED`.
default = []
hw-cuda = []

[dependencies]
cxx = { workspace = true }

[build-dependencies]
cc = { workspace = true, features = ["parallel"] }
cxx-build = { workspace = true }
build-utils = { path = "../pegainfer-comm-build-utils", package = "pegainfer-comm-build-utils" }
