[package]
edition = "2024"
name = "pegainfer-comm-p2p-all-to-all"
publish = false

[features]
# Hardware backend feature: the all-to-all path needs both CUDA (kernels +
# torch tensor interop) and RDMA Verbs (cross-rank transport). The single
# top-level `hw-rdma` activates both subsystems.
default = []
hw-rdma = [
    "dep:nvtx",
    "fabric-lib/hw-rdma",
    "cuda-lib/hw-cuda",
    "a2a-kernels/hw-cuda",
]

[dependencies]
a2a-kernels = { path = "../pegainfer-comm-a2a-kernels", package = "pegainfer-comm-a2a-kernels" }
cuda-lib = { path = "../pegainfer-comm-cuda-lib", package = "pegainfer-comm-cuda-lib" }
fabric-lib = { path = "../pegainfer-comm-fabric-lib", package = "pegainfer-comm-fabric-lib" }
thread-lib = { path = "../pegainfer-comm-thread-lib", package = "pegainfer-comm-thread-lib" }

anyhow = { workspace = true }
# nvtx is NVIDIA's profiling marker library and is only referenced from the
# CUDA + RDMA worker module, which is itself gated by `hw-rdma`. Keep it
# optional so a default-off build never pulls in any NVIDIA-related symbol.
nvtx = { workspace = true, optional = true }
oneshot = { workspace = true }
tracing = { workspace = true }
